# mimic

./: .gitignore  README.md  changes.patch  projecte-aina_dataset_metadata.tsv  pyproject.toml  requirements.txt
src/techiaith/mimic/: cli.py  dataset.py  dataset_metadata.py  evals.py  inference.py  schema.py  utils.py
src/techiaith/mimic/demos/: q_and_a.py
